# Codex_2

./: CHANGELOG.md  Dockerfile  Makefile  README.md  bot.py  pyproject.toml
ally/: __init__.py  cli.py  models.py  types.py
ally/analysis/: __init__.py  core.py
ally/dialog_strategies/: __init__.py  base.py  rules.py  sentiment.py  static.py
ally/responder/: __init__.py  core.py
ally/service/: __init__.py  core.py
ally/storage/: __init__.py  file_store.py
ally/utils/: __init__.py  atomic.py
ally/web/: app.py
ally/web/static/: app.css
ally/web/templates/: base.html  entry.html  index.html  pulse.html
audit_engine/: __init__.py  engine.py  models.py  pipeline.py  splitter.py  storage.py  utils.py
pd152_bot/: .env  bot.py
tests/: test_analysis.py  test_audit_engine.py  test_cli.py  test_dialog_rules.py  test_dialog_sentiment.py  test_responder.py  test_storage_atomic.py  test_threads.py  test_web_api.py
